# HoughTrigMapping_dev

./: Readme.md
doc/: Doxyfile
orig/: TRGCDCHoughMapping.cc  Utilities.cc  orig_flowchart.drawio
orig/new/: TRGCDCHoughMapping-1r.cc  TRGCDCHoughMapping.cc  Utilities.cc  Utilities.h  t
orig/new/result/: HoughMapping.cc  HoughMappingMinus.cc  HoughMappingPlus.cc  UT3_0_SL0.vhd  UT3_0_SL0_p.vhd  UT3_0_SL2.vhd  UT3_0_SL2_p.vhd  UT3_0_SL4.vhd  UT3_0_SL4_p.vhd  UT3_0_SL6.vhd  UT3_0_SL6_p.vhd  UT3_0_SL8.vhd  UT3_0_SL8_p.vhd
resource/: SL-map.xlsx
src/: CMakeLists.txt
src/CMakeModules3rdParty/functions/: dolChkBuildEnv.cmake
src/genHoughMap/: CMakeLists.txt  genHoughMap.cc  genHoughMap.h
src/test_genHoughMap/: CMakeLists.txt  test_genHoughMap.cc
